k8s/postgres-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: postgres
    backend: ronda
  name: postgres
spec:
  serviceName: database
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      # volumes:
      #   - name: ronda-mount
      #     persistentVolumeClaim:
      #       claimName: ronda-pvc
      containers:
        - image: postgres:14.15-alpine3.20
          name: postgres
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
