k8s/ronda-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ronda
  name: ronda
spec:
  selector:
    matchLabels:
      app: ronda
  template:
    metadata:
      labels:
        app: ronda
    spec:
      containers:
      - image: ozennou/ronda_game:latest
        name: ronda-game
        ports:
          - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
