k8s/ronda-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ronda
  labels:
    backend: ronda
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ronda
            port:
              number: 8000
